salesforce-classic-Feature-IN-955/src/objects/TRACT_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used to save the Gotransverse Configuration details.</description>
    <label>Gotransverse Setup</label>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gotransverse Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Gotransverse Api Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field store if a batch is currently in progress.</description>
        <label>Batch Triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Order_Indicator_Value__c</fullName>
        <label>Change Order Indicator Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Indicator__c</fullName>
        <label>Change Order Indicator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Gotransverse Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Hosted_Payment_URL__c</fullName>
        <description>This Field store the value for the hosted payment URL.</description>
        <label>Gotransverse Hosted Payment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Sync_Type__c</fullName>
        <label>Gotransverse Sync Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Custom_Field_Id__c</fullName>
        <description>This field store the id of custom field selected by the user on billing tab.</description>
        <label>Mapped Custom Field Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>Gotransverse OrderStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Marketplace_Id__c</fullName>
        <label>Selected Marketplace Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_SFDC_Account_Id__c</fullName>
        <label>Store SFDC Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPassword__c</fullName>
        <label>Gotransverse TPassword</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Password__c</fullName>
        <label>Gotransverse Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACT_URL2_0__c</fullName>
        <label>Gotransverse URL2.0</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TRACT_URL__c</fullName>
        <defaultValue>&quot;https://tract-qa.gotransverse.com&quot;</defaultValue>
        <description>TRACT Server URL</description>
        <inlineHelpText>Please provide a correct TRACT URL. Ex https://my.tractbilling.com</inlineHelpText>
        <label>Gotransverse URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tract_User_Name__c</fullName>
        <defaultValue>&quot;algo-sales&quot;</defaultValue>
        <label>Gotransverse User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_API_Key__c</fullName>
        <description>This field is use to store the API key.</description>
        <label>X-API-Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>